--- a/Source/Analyzer/Analyzer.csproj
+++ b/Source/Analyzer/Analyzer.csproj
@@ -45,12 +45,14 @@
   <ItemGroup>
     <Compile Include="Analyzer.cs" />
     <Compile Include="code.cs" />
+    <Compile Include="cppFile.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="function.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="token.cs" />
