--- a/Source/Analyzer/Analyzer.csproj
+++ b/Source/Analyzer/Analyzer.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="result.cs" />
     <Compile Include="token.cs" />
+    <Compile Include="usefulStuff.cs" />
     <EmbeddedResource Include="choice.resx">
       <DependentUpon>choice.cs</DependentUpon>
     </EmbeddedResource>
